<resources>
    <string name="app_name">DiscountShop</string>


    <string name="hello_world">Hello world!</string>
    <string name="title_activity_item_list_page">ItemListPage</string>
    <string name="title_activity_retailer_add_item">RetailerAddItem</string>
    <string name="client_item_list_page">ClientItemListPage</string>
    <string name="title_activity_retailer_item_list_page">RetailerItemListPage</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_retailer_login">retailerLogin</string>
    <string name="title_activity_display_item_detail">DisplayItemDetail</string>
    <string name="title_activity_retailer_settings">RetailerSettings</string>
    <string name="title_activity_retailer_update_item">RetailerUpdateItem</string>
    <string name="productImage">productImage</string>

    <string name="title_activity_consumer_setting">ConsumerSetting</string>
    <string name="setting">Setting</string>
    <string name="radarRange">Radar Range (miles):</string>
    <string name="logout">LogOut</string>
    <string name="title_activity_consumer_register">ConsumerRegister</string>
    <string name="entrance">Entrance:</string>
    <string name="title_activity_consumer_login">ConsumerLogin</string>
    <string name="title_activity_retailer_register">RetailerRegister</string>
    <string name="login">Login</string>
    <string name="username">User Name:</string>
    <string name="password">Password:</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="email">Email:</string>
    <string name="retailerName">Shop Name:</string>
    <string name="address">Address:</string>
    <string name="zipcode">Zip Code:</string>
    <string name="signup">Sign Up</string>
    <string name="camera">Camera</string>
    <string name="album">Album</string>
    <string name="here_is_item_name">Here Is Item Name</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="profile_setting">Profile Settings</string>
    <string name="add_item">Add Item</string>
    <string name="update_address">Update Address:</string>
    <string name="item_name">Item Name : </string>
    <string name="new_price">New Price : </string>
    <string name="add_pic">Add Picture : </string>
    <string name="photo">Photos</string>
    <string name="added_item_info">Added Item Information</string>
    <string name="consumer">Consumer</string>
    <string name="retailer">Retailer</string>


</resources>
