<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="product_exp.discountshop.Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login"
        android:id="@+id/loginTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:textStyle="bold"
        android:textSize="40sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/username"
        android:id="@+id/usernameTextView"
        android:layout_marginTop="122dp"
        android:textSize="36sp"
        android:layout_below="@+id/loginTextView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/password"
        android:id="@+id/passwordTextView"
        android:textSize="36sp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:textColor="#CBD4CB"
        android:textSize="30sp"
        android:background="@drawable/save_button"
        android:shadowColor="#707070"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/submit"
        android:id="@+id/loginSubmitButton"
        android:layout_marginTop="71dp"
        android:layout_below="@+id/passwordEditText"
        android:layout_centerHorizontal="true"
        android:onClick="goItemList" />

    <EditText
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEditText"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/loginSubmitButton" />

    <EditText
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:id="@+id/usernameEditText"
        android:layout_alignBottom="@+id/usernameTextView"
        android:layout_alignEnd="@+id/passwordEditText"
        android:layout_marginBottom="-20dp" />

    <Button
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:textSize="28sp"
        android:textColor="#0099ff"
        android:text="@string/signup"
        android:id="@+id/signupButton"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/loginSubmitButton"
        android:layout_marginBottom="62dp"
        android:onClick="goRegister" />

</RelativeLayout>
