<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="product_exp.discountshop.ConsumerRegister"
    android:id="@+id/consumerRegister">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/register"
        android:id="@+id/cregisterTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:textStyle="bold"
        android:textSize="40sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/username"
        android:id="@+id/crusernameTextView"
        android:textSize="36sp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:id="@+id/rrusernameEditText"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/cregisterTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/password"
        android:id="@+id/crpasswordTextView"
        android:textSize="36sp"
        android:layout_below="@+id/rrusernameEditText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="62dp" />

    <EditText
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/crpasswordEditText"
        android:layout_alignBottom="@+id/crpasswordTextView"
        android:layout_alignStart="@+id/rrusernameEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/email"
        android:id="@+id/cemailTextView"
        android:textSize="36sp"
        android:layout_above="@+id/rrusernameEditText"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="54dp" />

    <EditText
        android:layout_width="370dp"
        android:layout_height="80dp"
        android:id="@+id/cremailEditText"
        android:layout_alignBottom="@+id/cemailTextView"
        android:layout_alignStart="@+id/cregisterTextView"
        android:layout_marginBottom="-20dp"
        android:layout_marginLeft="-50dp" />

    <Button
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:textColor="#CBD4CB"
        android:textSize="30sp"
        android:background="@drawable/save_button"
        android:shadowColor="#707070"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/submit"
        android:id="@+id/crsubmitButton"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/crpasswordTextView"
        android:layout_centerHorizontal="true"
        android:onClick="goItemList" />

</RelativeLayout>
