<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.ravi.disco.RetailerSettings">


    <TextView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:contentDescription="Item"
        android:textSize="40sp"
        android:textColor="#000000"
        android:gravity="center"
        android:text="@string/profile_setting"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/price"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="40dp"
        android:textSize="35sp"
        android:contentDescription="Price"
        android:text="Gaint Eagle"
        android:textColor="#000066"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/settings"/>


    <Button
        android:id="@+id/add_item"
        android:text="@string/add_item"
        android:textColor="#CBD4CB"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_below="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/save_button"
        android:shadowColor="#707070"
        android:shadowDx="0"
        android:shadowDy="0"
        android:layout_marginLeft="10dp"
        android:shadowRadius="5"
        android:onClick="goAddItem" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="50dp"
        android:textSize="35sp"
        android:gravity="left"
        android:contentDescription="address"
        android:text="@string/update_address"
        android:textColor="#000066"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/settings"/>


    <EditText
        android:id="@+id/editAddress"
        android:inputType="textMultiLine"
        android:lines="4"
        android:gravity="top|left"
        android:maxLines="10"
        android:layout_height="wrap_content"
        android:layout_width="500dp"
        android:scrollbars="vertical"
        />

    <Button
        android:id="@+id/save_settings"
        android:text="@string/save"
        android:textColor="#CBD4CB"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_below="@+id/editAddress"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="400dp"
        android:background="@drawable/save_button"
        android:shadowColor="#707070"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:onClick="updateAddress"
        />


    <Button
        android:id="@+id/logout"
        android:text="@string/logout"
        android:textColor="#CBD4CB"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_below="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/save_button"
        android:shadowColor="#707070"
        android:shadowDx="0"
        android:shadowDy="0"
        android:layout_marginLeft="10dp"
        android:shadowRadius="5"
        android:onClick="goMain" />
</LinearLayout>
