<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ravi.disco.retailerLogin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/productImage"
            android:src="@drawable/discount"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:id="@+id/Discount" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp"
            android:textSize="35sp"
            android:gravity="left"
            android:contentDescription="Price"
            android:text="@string/username"
            android:textColor="#000066"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/Discount"
            />

        <EditText
            android:id="@+id/usernameinput"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="250dp"
            android:textSize="25sp"
            android:gravity="left"
            android:contentDescription="Price"
            android:textColor="#000066"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/Discount"
            />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp"
            android:textSize="35sp"
            android:gravity="left"
            android:contentDescription="Price"
            android:text="@string/password"
            android:textColor="#000066"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/username"
            />
        <EditText
            android:id="@+id/passwordinput"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="250dp"
            android:textSize="25sp"
            android:gravity="left"
            android:contentDescription="Price"
            android:password="true"
            android:textColor="#000066"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/usernameinput"
            />

        <Button
            android:id="@+id/save_btn"
            android:text="@string/login"

            android:textColor="#CBD4CB"
            android:textSize="30sp"
            android:background="@drawable/save_button"
            android:shadowColor="#707070"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"

            android:gravity="center"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="61dp"

            android:layout_marginLeft="180dp"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:onClick="goRetailerItemList" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="#0099ff"
            android:id="@+id/sgn_btn"
            android:layout_below="@+id/save_btn"
            android:layout_alignStart="@+id/save_btn"
            android:layout_marginTop="45dp"
            android:layout_alignEnd="@+id/save_btn"
            android:textSize="30dp"
            android:onClick="goSignUp" />

    </RelativeLayout>





</LinearLayout>

